Fixed tiny gap between navbar and dropdown menus

--- a/docs/style.css
+++ b/docs/style.css
@@ -56,6 +56,7 @@
     width: 110px;
     position: absolute;
     background-color: gray;
+    margin-left: -1px;
 }
 .shape-dropdown-content a{
     padding-top: 10px;
@@ -69,6 +70,7 @@
     width: 135px;
     position: absolute;
     background-color: gray;
+    margin-left: -1px;
 }
 .color-dropdown-content a{
     padding-top: 10px;
@@ -127,6 +129,7 @@
     height: 50px;
     position: absolute;
     background-color: gray;
+    margin-left: -1px;
 }
 .size-dropdown:hover .size-dropdown-content{
     display: inline-block;
